integração com front + back: formulário

--- a/frontend/src/Main.css
+++ b/frontend/src/Main.css
@@ -6,7 +6,7 @@ main ul{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    list-style: nome;
+    list-style-type: none;
 }
 @media (max-width: 650px){
     main ul{
